unpackaged/main/default/objects/NLM_Condition__c/NLM_Condition__c.object-meta.xml
<CustomObject>
    <label>NLM Condition</label>
    <nameField>
        <label>NLM Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NLM Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>