unpackaged/main/default/objects/NLM_Condition__c/fields/Advanced_Condition__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates the Condition is considered Advanced.</description>
    <label>Advanced Condition?</label>
    <type>Checkbox</type>
</CustomField>