unpackaged/main/default/objects/NLM_Condition__c/fields/Annotation__c.field-meta.xml
<CustomField>
    <fullName>Annotation__c</fullName>
    <label>Annotation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>