unpackaged/main/default/objects/NLM_Condition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Plain text description of the condition</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>