unpackaged/main/default/objects/NLM_Condition__c/fields/Entry_Term_s__c.field-meta.xml
<CustomField>
    <fullName>Entry_Term_s__c</fullName>
    <label>Entry Term(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>