unpackaged/main/default/objects/NLM_Condition__c/fields/MeSH_Heading__c.field-meta.xml
<CustomField>
    <fullName>MeSH_Heading__c</fullName>
    <label>MeSH Heading</label>
    <type>TextArea</type>
</CustomField>