unpackaged/main/default/objects/NLM_Condition__c/fields/MeSH_ID__c.field-meta.xml
<CustomField>
    <fullName>MeSH_ID__c</fullName>
    <externalId>true</externalId>
    <label>MeSH ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>