unpackaged/main/default/objects/NLM_Condition__c/fields/Non_MeSH_Condition__c.field-meta.xml
<CustomField>
    <fullName>Non_MeSH_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-MeSH Condition</label>
    <type>Checkbox</type>
</CustomField>