unpackaged/main/default/objects/NLM_Condition__c/fields/Parent_Condition__c.field-meta.xml
<CustomField>
    <fullName>Parent_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the parent condition - one level higher in hierarchy and nomenclature.  The Parent is less specific, the Child is more specific.</description>
    <label>Parent Condition</label>
    <referenceTo>NLM_Condition__c</referenceTo>
    <relationshipLabel>NLM Conditions</relationshipLabel>
    <relationshipName>Child_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>