unpackaged/main/default/objects/NLM_Condition__c/fields/Scope_Note__c.field-meta.xml
<CustomField>
    <fullName>Scope_Note__c</fullName>
    <label>Scope Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>