unpackaged/main/default/objects/NLM_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeSH_ID__c</columns>
    <columns>MeSH_Heading__c</columns>
    <columns>Entry_Term_s__c</columns>
    <columns>Advanced_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>